--- a/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
+++ b/Delta Green by Arc Dream Publishing/src/scss/_globals.scss
@@ -88,8 +88,9 @@
             &[type='text'],
             &[type='number'] {
                 background   : transparent;
-                border-radius: 0em;
                 border       : none;
+                border-radius: 0em;
+                color        : $maincolor;
                 height       : 2.1em;
                 text-align   : center;
 
@@ -110,10 +111,12 @@
 
         textarea {
             background    : transparent;
+            color         : $maincolor;
             font-size     : 1em;
             font-weight   : normal;
             height        : 50px;
-            margin-bottom: 2%;
+            margin        : 0.5%;
+            margin-bottom : 2%;
             min-height    : 8em;
             overflow      : scroll;
             overflow-wrap : break-word;
@@ -122,6 +125,7 @@
             text-align    : left;
             vertical-align: top;
             white-space   : pre-line;
+            width         : 99%;
 
             &:placeholder-shown {
                 background: $accent2;
