--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -11,6 +11,7 @@ input[type=number] {
 
 select.sheet-dtype {
     width: 41.31px;
+    height: 27px;
     margin: 0px;
     vertical-align: top;
 	 -webkit-appearance: none;
@@ -1155,6 +1156,10 @@ button[type=roll].sheet-benniesxp {
     display: block;
 }
 
+.sheet-modifier {
+    text-align: center;
+}
+
 .sheet-hideMods:checked ~ .sheet-useMods {
     display: none;
 }
@@ -1188,6 +1193,26 @@ button[type=roll].sheet-benniesxp {
     content: "♥";
     font-size: 2em;
     color: red;
+}
+
+.sheet-sizecat {
+    font-size: .75em;
+    color: gray;
+    position: relative;
+    top: -10px;
+    bottom: -10px;
+}
+
+.sheet-showsize {
+    display: none;
+}
+
+.sheet-usesize:checked + .sheet-showsize {
+    display: block;
+}
+
+.sheet-usesize:checked ~ .sheet-watchtoughness {
+    margin-top: -20px;
 }
 
 .sheet-basederived {
@@ -1712,6 +1737,10 @@ input.sheet-armorCarried {
  .sheet-damage,
  .sheet-shots {
    width: 85px !important;
+ }
+
+ input[type="number"].sheet-weaponshots {
+    width: 33px;
  }
 
  .sheet-invisbutton {
@@ -2367,7 +2396,8 @@ input:not([value="1"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells]
 [data-groupname=repeating_wsweapons],
 [data-groupname=repeating_wshipcrew],
 [data-groupname=repeating_paweapons],
-[data-groupname=repeating_raweapons] {
+[data-groupname=repeating_raweapons],
+[data-groupname=repeating_consumables] {
     width: 100%;
 }
 .repcontrol_add,
@@ -2450,6 +2480,10 @@ span.sheet-vehiclesT {
     display: inline-block;
 }
 /*----------- Start Show/Hide Sections -----------*/
+.sheet-optional {
+    display: none;
+}
+
 .sheet-civilian,
 .sheet-IF,
 .sheet-archetype,
@@ -2698,7 +2732,9 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 }
 
 .sheet-usewealth,
-.sheet-wealthmod {
+.sheet-wealthmod,
+.sheet-showconsumables,
+.sheet-consumablesmod {
 	display: none;
 }
 
@@ -2713,8 +2749,27 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 	display: flex;
 }
 
-.sheet-useWealthMod:checked ~ .sheet-wealthmod {
+.sheet-useconsumables:checked + .sheet-showconsumables {
+    display: block;
+}
+
+.sheet-useWealthMod:checked ~ .sheet-wealthmod,
+.sheet-useConsumablesMod:checked ~ .sheet-consumablesmod {
     display: inline;
+}
+
+.sheet-useConsumablesMod:checked ~ [data-groupname=repeating_consumables] > .repitem > .sheet-basederived > .sheet-consumablesmod {
+	display: inline;
+}
+
+.sheet-derivedlabelinput {
+    border: none;
+    border-bottom: 1px solid black;
+    width: 85%;
+    font-weight: bold;
+    color: black;
+    margin-left: 0px;
+    padding-left: 0px;
 }
 
 /*----------- End Show/Hide Sections -----------*/
@@ -3434,7 +3489,7 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-srmconfig {
-    height: 100px;
+    height: 125px;
 }
 
 .sheet-injury {
@@ -3455,7 +3510,7 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-miscconfig {
-    height: 200px;
+    height: 220px;
 }
 
 .sheet-logoconfig,
@@ -4545,13 +4600,21 @@ label.sheet-abmenu:hover {
 .sheet-rolltemplate-emote .inlinerollresult,
 .sheet-rolltemplate-emote .inlinerollresult.fullcrit,
 .sheet-rolltemplate-emote .inlinerollresult.fullfail,
-.sheet-rolltemplate-emote .inlinerollresult.importantroll {
+.sheet-rolltemplate-emote .inlinerollresult.importantroll,
+.sheet-rolltemplate-consumables .inlinerollresult,
+.sheet-rolltemplate-consumables .inlinerollresult.fullcrit,
+.sheet-rolltemplate-consumables .inlinerollresult.fullfail,
+.sheet-rolltemplate-consumables .inlinerollresult.importantroll {
     background-color: transparent;
     border: none;
     padding: 0px;
     font-size: 1em;
     font-weight: bolder;
     font-style: italic;
+}
+
+.sheet-rolltemplate-consumables .inlinerollresult.fullfail {
+    color: maroon;
 }
 
 /*.sheet-rolltemplate-roll .sheet-templateButton > a[href^="~"],
@@ -4583,7 +4646,8 @@ label.sheet-abmenu:hover {
 }
 
 .sheet-rolltemplate-unshake .sheet-emoteish,
-.sheet-rolltemplate-emote .sheet-emoteish {
+.sheet-rolltemplate-emote .sheet-emoteish,
+.sheet-rolltemplate-consumables .sheet-emoteish {
     border: 1px solid #F0C392;
     color: #653E10;
     background-color: #F5E4D3;
@@ -4681,4 +4745,5 @@ label.sheet-abmenu:hover {
     padding:0;
     text-decoration: underline;
 }
+
 /*----------- End Roll Template --------------------*/
