--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -150,6 +150,7 @@
     .sheet-margin-left {margin-left: 2%; }
     .sheet-pictos { font-family: 'pictos'; }
     .sheet-none { display: none; }
+    .sheet-text-align-left { text-align: left; }
     .sheet-dicefontd10 {
         color: $maincolor;
         font-family: 'dicefontd10';
@@ -173,7 +174,8 @@
 /* NPC SHEET
 ============================= */
 div.sheet-npc {
-    input[type='text'] {
+    input[type='text'],
+    input[type='number'] {
         width: 100%;
     }
 
@@ -190,15 +192,14 @@ div.sheet-npc {
          margin-left: 2%;
          max-width: 98%;
 
-        h1 {
-            font-size: 1em;
-        }
+        h1 { font-size: 1em; }
 
-        h2 {
+        h2 { 
             text-align: center;
+            text-decoration: underline;
         }
 
-         button > h1 {
+        button > h1 {
             font-size: 0.8em;
             line-height: 1.8em;
 
@@ -250,13 +251,22 @@ div.sheet-npc {
         /* SKILLS
         ----------------------------- */
         h1[data-i18n='skills'] { @include grid-area(5, 1, 5, 1);  }
-        label[data-i18n-title='']{ @include grid-area(5, 2, 5, 13); }
+        div.sheet-skills {
+            grid-row: 6 / 6;
+            margin-left: 2%;
+
+            div.sheet-section-skills,
+            div.sheet-section-header {
+                grid-column-gap: 1%;
+                grid-template-columns: 1fr 4em 2.5em;
+            }
+        }
 
         /* ATTACKS
         ----------------------------- */
-        h1[data-i18n='attacks'] { @include grid-area(6, 1, 6, 3);  }
+        h1[data-i18n='attacks'] { @include grid-area(7, 1, 7, 3);  }
         div.sheet-attacks { 
-            grid-row: 7 / 7;
+            grid-row: 8 / 8;
             margin-left: 2%;
 
             div.sheet-section-weapons,
@@ -268,9 +278,9 @@ div.sheet-npc {
 
         /* OTHER NOTES
         ----------------------------- */
-        h1[data-i18n='other notes'] { @include grid-area(8, 1, 8, 3);  }
+        h1[data-i18n='other notes'] { @include grid-area(9, 1, 9, 3);  }
         div.sheet-notes { 
-            grid-row: 9 / 9;
+            grid-row: 10 / 10;
             margin-left: 2%;
 
             div.sheet-section-header,
@@ -279,7 +289,6 @@ div.sheet-npc {
                 grid-template-columns: 10em 1fr;
             }
         }
-
     }
 }
     
