--- a/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
+++ b/Delta Green by Arc Dream Publishing/src/pug/_pc.pug
@@ -134,7 +134,7 @@
 								input(name='attr_fail' title='@{repeating_skills_${x}_fail}' type='checkbox')
 							label(data-i18n-title='skill name' title='skill name')
 								input.center(data-i18n-placeholder='skill name' name='attr_name' placeholder='skill name' title='@{repeating_skills_${x}_name}' type='text' value='')
-							button.dicefontd10(data-i18n-title='skill roll' name='skill roll' title='skill roll' type='roll' value='') k
+							button.dicefontd10(data-i18n-title='skill roll' name='skill roll' title='skill roll' type='roll' value=skillRollValue) k
 							.vert-line
 							label(data-i18n-title='skill rank' title='skill rank')
 								input(data-i18n-placeholder='0' name='attr_rank' title='@{repeating_skills_${x}_rank}' placeholder='0' type='number' value='')
