save update in progress

--- a/Symbaroum/src/scss/_colors.scss
+++ b/Symbaroum/src/scss/_colors.scss
@@ -4,6 +4,6 @@
    // COLORS
    	$maincolor: hsl(180, 100%, 13%);
     $accent1  : hsl(0, 0%, 96%);
-    $dark-font: #000;
+    $dark: #000;
     $gray     : hsl(0, 0%, 30%);
     $lightgray: hsla(0, 0%, 85%, 1);
