--- a/Symbaroum/src/scss/_globals.scss
+++ b/Symbaroum/src/scss/_globals.scss
@@ -7,4 +7,18 @@
 
     .charsheet {
         min-width: 850px;
+
+        h1 {
+        	color: $accent1;
+        	font-size: 1.5em;
+        }
+
+       	input[type=text],
+	    input[type=number] {
+	    	width: 100%;
+	    }
+
+	    label {
+	    	width: 100%;
+	    }
     }
