--- a/Symbaroum/symbaroum.pug
+++ b/Symbaroum/symbaroum.pug
@@ -1,6 +1,7 @@
 //- Old HTML TABS
 include src/pug/oldtabs.html
 
+input.tab(name="attr_page-number" type="hidden" value="1")
 
 // PC SHEET
 // =============================
@@ -11,19 +12,73 @@ include src/pug/oldtabs.html
 			span(data-i18n="name") Name
 		label(data-i18n-title="race" title="race")
 			input(name="attr_character-race" type="text")
-			span(data-i18n="race")
+			span(data-i18n="race") race
 		label(data-i18n-title="occupation" title="occupation")
 			input(name="attr_character-occupation" type="text")
-			span
+			span(data-i18n="occupation") occupation
 		label(data-i18n-title="player" title="player")
 			input(name="attr_player-name" type="text")
-			span(data-i18n="player")
+			span(data-i18n="player") player
 		label(data-i18n-title="experience-abbrv" title="exp")
 			input(name="attr_character-exp" type="number")
-			span(data-i18n="experience-abbrv")
+			span(data-i18n="experience-abbrv") exp
 		label(data-i18n-title="unspent" title="unspent")
 			input(name="attr_character-expu" type="number")
-			span(data-i18n="unspent")
+			span(data-i18n="unspent") unspent
+	.grid.character-quote
+		span.quote &ldquo;
+		label(data-i18n-title="quote" title="quote")
+			input(data-i18n-placeholder="quote" name="attr_character-quote" placeholder="Quote" type="text")
+			span(data-i18n="quote") quote
+		span.quote &ldquo;
+	.grid.character-shadow
+		label(data-i18n-title="shadow" title="shadow")
+			input(name="attr_character-shadow" type="text")
+			span(data-i18n="shadow") shadow
+	.grid.tabs
+		// CHARACTER TAB
+		input.tab(data-i18n-title="title-character-sheet" name="attr_page-number" title="Character Sheet" type="radio" value="1" checked)
+		span.tab(data-i18n="character") Character
+		// TRAITS & ABILITIES TAB
+		input.tab(data-i18n-title="title-traits-and-abilities" name="attr_page-number" type="radio" title="Traits and Abilities" value="2")
+		span.tab(data-i18n="traits-and-abilities" value="3") Traits | Abilities
+		// RITUALS & POWERS TAB
+		input.tab(data-i18n-title="title-rituals-and-powers" name="attr_page-number" title="Rituals and Power" type="radio" value="3")
+		span.tab(data-i18n="rituals-and-powers") Rituals | Powers
+		// EQUIPMENT & BIO TAB
+		input.tab(data-i18n-title="title-equipment-group-and-friends" name="attr_page-number" title="Equipment, Group, and Friends" type="radio" value="4")
+		span.tab(data-i18n="equipment-and-biography") Equipment | Bio
+	.grid.toughness.section-pc1
+		h1.center(data-i18n="toughness") Toughness
+		label.center(data-i18n-title="current toughness input" title="current toughness input")
+			input.center(name="attr_toughness" title="@{toughness}" type="number" value="@{strong}")
+		span.center(data-i18n="current") Current
+		label.center(data-i18n-title="toughness maximum input" title="toughness maximum input")
+			input.center(min="10" name="attr_toughness_max" title="@{toughness_max}" type="number" value="10")
+		span.center(data-i18n="maximum-abbrv") Max
+		label.center(data-i18n-title="pain threshold display" title="pain threshold display")
+			input.center(name="attr_pain_threshold" title="@{pain_threshold}" type="number" value="ceil(@{strong}/2)" disabled="true")
+		span.center(data-i18n="pain-threshold-abbrv") Pain thresh.
+	.grid.corruption.section-pc1
+		h1.center(data-i18n="corruption") Corruption
+		button(data-i18n-title="title-choose-dice-and-roll" name="roll_corruption" title="Pick a dice value (to the right) and hit this button to roll" type="roll" value="/roll @{corruption-d} for Corruption...")
+		select(name="attr_corruption-d")
+			option(value="d4") d4
+			option(value="d6") d6
+			option(value="d8") d8
+			option(value="d10") d10
+			option(value="d12") d12
+		label.center(ata-i18n-title="corruption input" title="corruption input")
+			input.center(name="attr_corruption" min="0" title="@{corruption}" type="number" value="0")
+		span.center(data-i18n="temporary-abbrv") Temp.
+		label.center(ata-i18n-title="permanent corruption input" title="permanent corruption input")
+			input.center(name="attr_corruption_permanent" min="0" title="@{corruption_permanent}" type="number"  value="0")
+		span.center(data-i18n="permanent-abbrv") Perm.
+		label.center(ata-i18n-title="corruption threshold" title="corruption threshold")
+			input(name="attr_corruption_threshold" title="@{corruption_threshold}" type="number"  value="ceil(@{resolute}/2)" disabled="true")
+		span.center(data-i18n="threshold") Threshold
+
+
 
 
 
