--- a/Symbaroum/symbaroum.scss
+++ b/Symbaroum/symbaroum.scss
@@ -16,18 +16,116 @@
 ============================= */ 
     div.sheet-grid {
         display: inline-grid;
+        grid-column-gap: 1%;
     }
     
+/* GENERIC STYLES
+============================= */ 
+	.sheet-border-bottom { border-bottom: 0.15em solid $maincolor; }
+	.sheet-center { text-align: center; }
 
  /* PC
 ============================= */ 
 	div.sheet-pc {
+		grid-template-columns: 1fr 1fr;
+		grid-column-gap: 0.1%;
+		grid-row-gap: 5%;
+		width: 100%;
+		background-color: rgba(1, 1, 1, 0.71);
 
 	     /* CHARACTER INFO
 	    ----------------------------- */
 		div.sheet-character-info {
-			grid-template-columns: 10em 5em 8em 5em 1fr 1fr;
+			grid-template-columns: 22em 2fr 3fr 2fr 1fr 1fr;
+			grid-area: 1 / 1 / 1 / 3;
+
+		}
+
+	     /* CHARACTER QUOTE
+	    ----------------------------- */
+		div.sheet-character-quote {
+			grid-template-columns: 1fr 90% 1fr;
+			grid-column: 1 / 2;
+
+			input[type="text"] {
+				font-style: italic;
+			}
+
+			label {
+				grid-column: 2 / 3;
+				font-style: italic;
+			}
+
+			span.sheet-quote {
+				transform: rotate(180deg);
+				position: relative;
+				font-size:3em;
+
+				&:nth-of-type(1) {
+					transform: rotate(360deg);
+					top: -20%
+				}
+
+				&:nth-of-type(2) {
+					transform: rotate(180deg);
+					top: -20%;
+				}
+			}
 		} 
+
+		/* CHARACTER SHAOOW
+	    ----------------------------- */
+	    div.sheet-character-shadow {
+	    	grid-column: 2 / 3;
+	    }
+
+	   /* TABS
+	    ----------------------------- */
+	    div.sheet-tabs {
+	    	grid-column: 1 / 4;
+	    	grid-template-columns: 1fr 1fr 1fr;
+	    	border-bottom: 5px solid $dark; 
+
+	        @for $i from 1 through 4 {
+	            input.sheet-tab:nth-of-type(#{$i}),
+	            span.sheet-tab:nth-of-type(#{$i})   {
+	            	grid-row: 1;
+	                grid-column: #{$i} / #{$i};
+	            }
+	        }
+	    }
+
+	   	/* TOUGHNESS
+	    ----------------------------- */
+	    div.sheet-toughness {
+	    	grid-column: 1 / 2;
+	    	grid-template-columns: 1fr 1fr 1fr;
+	    	margin-right: 2%;
+
+	    	h1 { grid-area: 1 / 1 / 1 / 4; }
+	    	label { grid-row: 2;  }
+	    	span { grid-row: 3; }
+	    }
+
+	   	/* CORRUPTION
+	    ----------------------------- */
+	    div.sheet-corruption {
+	    	grid-column: 2 / 3;
+	    	grid-template-columns: 5em 4em 1fr 1fr;
+	    	margin-left: 2%;
+
+	    	button {
+	    		grid-row: 2;
+	    		background-image:url(http://i.imgur.com/MC61Qmt.png?1);
+	    		background-position: center;
+	    		height: 1.5em;
+	    	}
+
+	    	h1 { grid-area: 1 / 1 / 1 / 5; }
+	    	select { grid-row: 3; }
+	    	label { grid-row: 2;  }
+	    	span { grid-row: 3; }
+	    }
 	}
 
 
@@ -86,7 +184,7 @@ input.sheet-tab99:checked ~ div[class^="sheet-section"] {
     padding:1em;   
 }
 input.sheet-tab {
-	width: 175px;
+	width: 100%;
 	height: 23px;
 	cursor: pointer;
 	position: relative;
@@ -99,11 +197,9 @@ span.sheet-tab {
 	display: inline-block;
 	padding-left: 3px;
 	padding-right: 3px;
-	width: 175px;
 	height: 23px;
 	cursor: pointer;
 	position: relative;
-	margin-left: -184px;
 	margin-top: 0px;
 	color: #FAFAFA;
 	border-radius: 5px 5px 0px 0px;
@@ -125,10 +221,10 @@ input.sheet-tab:checked::before {
 	color:blue;
 }
 /* Next section makes a page visible when the tab is clicked */
-input.sheet-tab1:checked ~ div.sheet-section-pc1,
-input.sheet-tab2:checked ~ div.sheet-section-pc2,
-input.sheet-tab3:checked ~ div.sheet-section-pc3,
-input.sheet-tab4:checked ~ div.sheet-section-pc4{
+input.sheet-tab[value="1"] ~ div.sheet-section-pc1,
+input.sheet-tab[value="2"] ~ div.sheet-section-pc2,
+input.sheet-tab[value="3"] ~ div.sheet-section-pc3,
+input.sheet-tab[value="4"] ~ div.sheet-section-pc4 {
 	max-height: 999999px;
     max-width:850px;
 	visibility: visible;
@@ -138,10 +234,7 @@ input.sheet-tab4:checked ~ div.sheet-section-pc4{
 	overflow: hidden;
 	border-radius: 0 0 5px 5px;
 }
-input.sheet-tab1:checked + span.sheet-tab1,
-input.sheet-tab2:checked + span.sheet-tab2,
-input.sheet-tab3:checked + span.sheet-tab3,
-input.sheet-tab4:checked + span.sheet-tab4{
+input.sheet-tab:checked + span.sheet-tab {
 	box-shadow: -2px -2px 5px #FAFAFA inset, 2px 2px 5px #202020 inset;
 	opacity: 1;
 }
@@ -227,7 +320,6 @@ input[type="text"]{
 	border-radius:6px;
 	font-size: 13px;
 	font-style:bold;
-	width:195px;
 }
 input[type="checkbox"] {
 	border: 3px solid #004040;
